Add sscan to opticsTest link for static building
Former-commit-id: a4e038db9c61202b94f3b6eb1f1a4ad6fad71287

--- a/opticsApp/src/Makefile
+++ b/opticsApp/src/Makefile
@@ -65,6 +65,7 @@ opticsTest_SRCS += opticsTest_registerRecordDeviceDriver.cpp
 
 opticsTest_LIBS += optics
 opticsTest_LIBS += calc
+opticsTest_LIBS += sscan
 opticsTest_LIBS += autosave
 opticsTest_LIBS += seq pv
 
